{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 22,
  "lineage": "b586c9a3-6a16-79f5-e8fb-3afbd75e167d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "blog_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:858299572191:loadbalancer/app/dev-blog-alb/9c6e5dce434eede4",
            "arn_suffix": "app/dev-blog-alb/9c6e5dce434eede4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-blog-alb-786537851.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:858299572191:loadbalancer/app/dev-blog-alb/9c6e5dce434eede4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-blog-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0eb7dda06047addb8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0094c589419defb13"
              },
              {
                "subnet_id": "subnet-041ef447b400233de"
              },
              {
                "subnet_id": "subnet-05ce405fbfe2a3603"
              }
            ],
            "subnets": [
              "subnet-0094c589419defb13",
              "subnet-041ef447b400233de",
              "subnet-05ce405fbfe2a3603"
            ],
            "vpc_id": "vpc-070de206c17503e80",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.sg_lb",
            "module.blog_vpc.aws_cloudwatch_log_group.flow_log",
            "module.blog_vpc.aws_customer_gateway.this",
            "module.blog_vpc.aws_db_subnet_group.database",
            "module.blog_vpc.aws_default_network_acl.this",
            "module.blog_vpc.aws_default_route_table.default",
            "module.blog_vpc.aws_default_security_group.this",
            "module.blog_vpc.aws_default_vpc.this",
            "module.blog_vpc.aws_egress_only_internet_gateway.this",
            "module.blog_vpc.aws_eip.nat",
            "module.blog_vpc.aws_elasticache_subnet_group.elasticache",
            "module.blog_vpc.aws_flow_log.this",
            "module.blog_vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.blog_vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.blog_vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.blog_vpc.aws_internet_gateway.this",
            "module.blog_vpc.aws_nat_gateway.this",
            "module.blog_vpc.aws_network_acl.database",
            "module.blog_vpc.aws_network_acl.elasticache",
            "module.blog_vpc.aws_network_acl.intra",
            "module.blog_vpc.aws_network_acl.outpost",
            "module.blog_vpc.aws_network_acl.private",
            "module.blog_vpc.aws_network_acl.public",
            "module.blog_vpc.aws_network_acl.redshift",
            "module.blog_vpc.aws_network_acl_rule.database_inbound",
            "module.blog_vpc.aws_network_acl_rule.database_outbound",
            "module.blog_vpc.aws_network_acl_rule.elasticache_inbound",
            "module.blog_vpc.aws_network_acl_rule.elasticache_outbound",
            "module.blog_vpc.aws_network_acl_rule.intra_inbound",
            "module.blog_vpc.aws_network_acl_rule.intra_outbound",
            "module.blog_vpc.aws_network_acl_rule.outpost_inbound",
            "module.blog_vpc.aws_network_acl_rule.outpost_outbound",
            "module.blog_vpc.aws_network_acl_rule.private_inbound",
            "module.blog_vpc.aws_network_acl_rule.private_outbound",
            "module.blog_vpc.aws_network_acl_rule.public_inbound",
            "module.blog_vpc.aws_network_acl_rule.public_outbound",
            "module.blog_vpc.aws_network_acl_rule.redshift_inbound",
            "module.blog_vpc.aws_network_acl_rule.redshift_outbound",
            "module.blog_vpc.aws_redshift_subnet_group.redshift",
            "module.blog_vpc.aws_route.database_dns64_nat_gateway",
            "module.blog_vpc.aws_route.database_internet_gateway",
            "module.blog_vpc.aws_route.database_ipv6_egress",
            "module.blog_vpc.aws_route.database_nat_gateway",
            "module.blog_vpc.aws_route.private_dns64_nat_gateway",
            "module.blog_vpc.aws_route.private_ipv6_egress",
            "module.blog_vpc.aws_route.private_nat_gateway",
            "module.blog_vpc.aws_route.public_internet_gateway",
            "module.blog_vpc.aws_route.public_internet_gateway_ipv6",
            "module.blog_vpc.aws_route_table.database",
            "module.blog_vpc.aws_route_table.elasticache",
            "module.blog_vpc.aws_route_table.intra",
            "module.blog_vpc.aws_route_table.private",
            "module.blog_vpc.aws_route_table.public",
            "module.blog_vpc.aws_route_table.redshift",
            "module.blog_vpc.aws_route_table_association.database",
            "module.blog_vpc.aws_route_table_association.elasticache",
            "module.blog_vpc.aws_route_table_association.intra",
            "module.blog_vpc.aws_route_table_association.outpost",
            "module.blog_vpc.aws_route_table_association.private",
            "module.blog_vpc.aws_route_table_association.public",
            "module.blog_vpc.aws_route_table_association.redshift",
            "module.blog_vpc.aws_route_table_association.redshift_public",
            "module.blog_vpc.aws_subnet.database",
            "module.blog_vpc.aws_subnet.elasticache",
            "module.blog_vpc.aws_subnet.intra",
            "module.blog_vpc.aws_subnet.outpost",
            "module.blog_vpc.aws_subnet.private",
            "module.blog_vpc.aws_subnet.public",
            "module.blog_vpc.aws_subnet.redshift",
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_dhcp_options.this",
            "module.blog_vpc.aws_vpc_dhcp_options_association.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.blog_vpc.aws_vpn_gateway.this",
            "module.blog_vpc.aws_vpn_gateway_attachment.this",
            "module.blog_vpc.aws_vpn_gateway_route_propagation.intra",
            "module.blog_vpc.aws_vpn_gateway_route_propagation.private",
            "module.blog_vpc.aws_vpn_gateway_route_propagation.public",
            "module.blog_vpc.data.aws_caller_identity.current",
            "module.blog_vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.blog_vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.blog_vpc.data.aws_partition.current",
            "module.blog_vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "blog_lb_lstnr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:858299572191:listener/app/dev-blog-alb/9c6e5dce434eede4/c030d05d5b774a96",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:858299572191:targetgroup/dev-blog-tg/77a0579029b20ee5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:858299572191:listener/app/dev-blog-alb/9c6e5dce434eede4/c030d05d5b774a96",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:858299572191:loadbalancer/app/dev-blog-alb/9c6e5dce434eede4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.blog_alb",
            "aws_lb_target_group.blog_tg",
            "aws_security_group.sg_lb",
            "module.blog_vpc.aws_cloudwatch_log_group.flow_log",
            "module.blog_vpc.aws_customer_gateway.this",
            "module.blog_vpc.aws_db_subnet_group.database",
            "module.blog_vpc.aws_default_network_acl.this",
            "module.blog_vpc.aws_default_route_table.default",
            "module.blog_vpc.aws_default_security_group.this",
            "module.blog_vpc.aws_default_vpc.this",
            "module.blog_vpc.aws_egress_only_internet_gateway.this",
            "module.blog_vpc.aws_eip.nat",
            "module.blog_vpc.aws_elasticache_subnet_group.elasticache",
            "module.blog_vpc.aws_flow_log.this",
            "module.blog_vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.blog_vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.blog_vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.blog_vpc.aws_internet_gateway.this",
            "module.blog_vpc.aws_nat_gateway.this",
            "module.blog_vpc.aws_network_acl.database",
            "module.blog_vpc.aws_network_acl.elasticache",
            "module.blog_vpc.aws_network_acl.intra",
            "module.blog_vpc.aws_network_acl.outpost",
            "module.blog_vpc.aws_network_acl.private",
            "module.blog_vpc.aws_network_acl.public",
            "module.blog_vpc.aws_network_acl.redshift",
            "module.blog_vpc.aws_network_acl_rule.database_inbound",
            "module.blog_vpc.aws_network_acl_rule.database_outbound",
            "module.blog_vpc.aws_network_acl_rule.elasticache_inbound",
            "module.blog_vpc.aws_network_acl_rule.elasticache_outbound",
            "module.blog_vpc.aws_network_acl_rule.intra_inbound",
            "module.blog_vpc.aws_network_acl_rule.intra_outbound",
            "module.blog_vpc.aws_network_acl_rule.outpost_inbound",
            "module.blog_vpc.aws_network_acl_rule.outpost_outbound",
            "module.blog_vpc.aws_network_acl_rule.private_inbound",
            "module.blog_vpc.aws_network_acl_rule.private_outbound",
            "module.blog_vpc.aws_network_acl_rule.public_inbound",
            "module.blog_vpc.aws_network_acl_rule.public_outbound",
            "module.blog_vpc.aws_network_acl_rule.redshift_inbound",
            "module.blog_vpc.aws_network_acl_rule.redshift_outbound",
            "module.blog_vpc.aws_redshift_subnet_group.redshift",
            "module.blog_vpc.aws_route.database_dns64_nat_gateway",
            "module.blog_vpc.aws_route.database_internet_gateway",
            "module.blog_vpc.aws_route.database_ipv6_egress",
            "module.blog_vpc.aws_route.database_nat_gateway",
            "module.blog_vpc.aws_route.private_dns64_nat_gateway",
            "module.blog_vpc.aws_route.private_ipv6_egress",
            "module.blog_vpc.aws_route.private_nat_gateway",
            "module.blog_vpc.aws_route.public_internet_gateway",
            "module.blog_vpc.aws_route.public_internet_gateway_ipv6",
            "module.blog_vpc.aws_route_table.database",
            "module.blog_vpc.aws_route_table.elasticache",
            "module.blog_vpc.aws_route_table.intra",
            "module.blog_vpc.aws_route_table.private",
            "module.blog_vpc.aws_route_table.public",
            "module.blog_vpc.aws_route_table.redshift",
            "module.blog_vpc.aws_route_table_association.database",
            "module.blog_vpc.aws_route_table_association.elasticache",
            "module.blog_vpc.aws_route_table_association.intra",
            "module.blog_vpc.aws_route_table_association.outpost",
            "module.blog_vpc.aws_route_table_association.private",
            "module.blog_vpc.aws_route_table_association.public",
            "module.blog_vpc.aws_route_table_association.redshift",
            "module.blog_vpc.aws_route_table_association.redshift_public",
            "module.blog_vpc.aws_subnet.database",
            "module.blog_vpc.aws_subnet.elasticache",
            "module.blog_vpc.aws_subnet.intra",
            "module.blog_vpc.aws_subnet.outpost",
            "module.blog_vpc.aws_subnet.private",
            "module.blog_vpc.aws_subnet.public",
            "module.blog_vpc.aws_subnet.redshift",
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_dhcp_options.this",
            "module.blog_vpc.aws_vpc_dhcp_options_association.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.blog_vpc.aws_vpn_gateway.this",
            "module.blog_vpc.aws_vpn_gateway_attachment.this",
            "module.blog_vpc.aws_vpn_gateway_route_propagation.intra",
            "module.blog_vpc.aws_vpn_gateway_route_propagation.private",
            "module.blog_vpc.aws_vpn_gateway_route_propagation.public",
            "module.blog_vpc.data.aws_caller_identity.current",
            "module.blog_vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.blog_vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.blog_vpc.data.aws_partition.current",
            "module.blog_vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "blog_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:858299572191:targetgroup/dev-blog-tg/77a0579029b20ee5",
            "arn_suffix": "targetgroup/dev-blog-tg/77a0579029b20ee5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:858299572191:targetgroup/dev-blog-tg/77a0579029b20ee5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-blog-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-070de206c17503e80"
          },
          "dependencies": [
            "module.blog_vpc.aws_cloudwatch_log_group.flow_log",
            "module.blog_vpc.aws_customer_gateway.this",
            "module.blog_vpc.aws_db_subnet_group.database",
            "module.blog_vpc.aws_default_network_acl.this",
            "module.blog_vpc.aws_default_route_table.default",
            "module.blog_vpc.aws_default_security_group.this",
            "module.blog_vpc.aws_default_vpc.this",
            "module.blog_vpc.aws_egress_only_internet_gateway.this",
            "module.blog_vpc.aws_eip.nat",
            "module.blog_vpc.aws_elasticache_subnet_group.elasticache",
            "module.blog_vpc.aws_flow_log.this",
            "module.blog_vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.blog_vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.blog_vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.blog_vpc.aws_internet_gateway.this",
            "module.blog_vpc.aws_nat_gateway.this",
            "module.blog_vpc.aws_network_acl.database",
            "module.blog_vpc.aws_network_acl.elasticache",
            "module.blog_vpc.aws_network_acl.intra",
            "module.blog_vpc.aws_network_acl.outpost",
            "module.blog_vpc.aws_network_acl.private",
            "module.blog_vpc.aws_network_acl.public",
            "module.blog_vpc.aws_network_acl.redshift",
            "module.blog_vpc.aws_network_acl_rule.database_inbound",
            "module.blog_vpc.aws_network_acl_rule.database_outbound",
            "module.blog_vpc.aws_network_acl_rule.elasticache_inbound",
            "module.blog_vpc.aws_network_acl_rule.elasticache_outbound",
            "module.blog_vpc.aws_network_acl_rule.intra_inbound",
            "module.blog_vpc.aws_network_acl_rule.intra_outbound",
            "module.blog_vpc.aws_network_acl_rule.outpost_inbound",
            "module.blog_vpc.aws_network_acl_rule.outpost_outbound",
            "module.blog_vpc.aws_network_acl_rule.private_inbound",
            "module.blog_vpc.aws_network_acl_rule.private_outbound",
            "module.blog_vpc.aws_network_acl_rule.public_inbound",
            "module.blog_vpc.aws_network_acl_rule.public_outbound",
            "module.blog_vpc.aws_network_acl_rule.redshift_inbound",
            "module.blog_vpc.aws_network_acl_rule.redshift_outbound",
            "module.blog_vpc.aws_redshift_subnet_group.redshift",
            "module.blog_vpc.aws_route.database_dns64_nat_gateway",
            "module.blog_vpc.aws_route.database_internet_gateway",
            "module.blog_vpc.aws_route.database_ipv6_egress",
            "module.blog_vpc.aws_route.database_nat_gateway",
            "module.blog_vpc.aws_route.private_dns64_nat_gateway",
            "module.blog_vpc.aws_route.private_ipv6_egress",
            "module.blog_vpc.aws_route.private_nat_gateway",
            "module.blog_vpc.aws_route.public_internet_gateway",
            "module.blog_vpc.aws_route.public_internet_gateway_ipv6",
            "module.blog_vpc.aws_route_table.database",
            "module.blog_vpc.aws_route_table.elasticache",
            "module.blog_vpc.aws_route_table.intra",
            "module.blog_vpc.aws_route_table.private",
            "module.blog_vpc.aws_route_table.public",
            "module.blog_vpc.aws_route_table.redshift",
            "module.blog_vpc.aws_route_table_association.database",
            "module.blog_vpc.aws_route_table_association.elasticache",
            "module.blog_vpc.aws_route_table_association.intra",
            "module.blog_vpc.aws_route_table_association.outpost",
            "module.blog_vpc.aws_route_table_association.private",
            "module.blog_vpc.aws_route_table_association.public",
            "module.blog_vpc.aws_route_table_association.redshift",
            "module.blog_vpc.aws_route_table_association.redshift_public",
            "module.blog_vpc.aws_subnet.database",
            "module.blog_vpc.aws_subnet.elasticache",
            "module.blog_vpc.aws_subnet.intra",
            "module.blog_vpc.aws_subnet.outpost",
            "module.blog_vpc.aws_subnet.private",
            "module.blog_vpc.aws_subnet.public",
            "module.blog_vpc.aws_subnet.redshift",
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_dhcp_options.this",
            "module.blog_vpc.aws_vpc_dhcp_options_association.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.blog_vpc.aws_vpn_gateway.this",
            "module.blog_vpc.aws_vpn_gateway_attachment.this",
            "module.blog_vpc.aws_vpn_gateway_route_propagation.intra",
            "module.blog_vpc.aws_vpn_gateway_route_propagation.private",
            "module.blog_vpc.aws_vpn_gateway_route_propagation.public",
            "module.blog_vpc.data.aws_caller_identity.current",
            "module.blog_vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.blog_vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.blog_vpc.data.aws_partition.current",
            "module.blog_vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:858299572191:security-group/sg-0eb7dda06047addb8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb7dda06047addb8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev_blog_sg_lb",
            "name_prefix": "",
            "owner_id": "858299572191",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-070de206c17503e80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.blog_vpc.aws_cloudwatch_log_group.flow_log",
            "module.blog_vpc.aws_customer_gateway.this",
            "module.blog_vpc.aws_db_subnet_group.database",
            "module.blog_vpc.aws_default_network_acl.this",
            "module.blog_vpc.aws_default_route_table.default",
            "module.blog_vpc.aws_default_security_group.this",
            "module.blog_vpc.aws_default_vpc.this",
            "module.blog_vpc.aws_egress_only_internet_gateway.this",
            "module.blog_vpc.aws_eip.nat",
            "module.blog_vpc.aws_elasticache_subnet_group.elasticache",
            "module.blog_vpc.aws_flow_log.this",
            "module.blog_vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.blog_vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.blog_vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.blog_vpc.aws_internet_gateway.this",
            "module.blog_vpc.aws_nat_gateway.this",
            "module.blog_vpc.aws_network_acl.database",
            "module.blog_vpc.aws_network_acl.elasticache",
            "module.blog_vpc.aws_network_acl.intra",
            "module.blog_vpc.aws_network_acl.outpost",
            "module.blog_vpc.aws_network_acl.private",
            "module.blog_vpc.aws_network_acl.public",
            "module.blog_vpc.aws_network_acl.redshift",
            "module.blog_vpc.aws_network_acl_rule.database_inbound",
            "module.blog_vpc.aws_network_acl_rule.database_outbound",
            "module.blog_vpc.aws_network_acl_rule.elasticache_inbound",
            "module.blog_vpc.aws_network_acl_rule.elasticache_outbound",
            "module.blog_vpc.aws_network_acl_rule.intra_inbound",
            "module.blog_vpc.aws_network_acl_rule.intra_outbound",
            "module.blog_vpc.aws_network_acl_rule.outpost_inbound",
            "module.blog_vpc.aws_network_acl_rule.outpost_outbound",
            "module.blog_vpc.aws_network_acl_rule.private_inbound",
            "module.blog_vpc.aws_network_acl_rule.private_outbound",
            "module.blog_vpc.aws_network_acl_rule.public_inbound",
            "module.blog_vpc.aws_network_acl_rule.public_outbound",
            "module.blog_vpc.aws_network_acl_rule.redshift_inbound",
            "module.blog_vpc.aws_network_acl_rule.redshift_outbound",
            "module.blog_vpc.aws_redshift_subnet_group.redshift",
            "module.blog_vpc.aws_route.database_dns64_nat_gateway",
            "module.blog_vpc.aws_route.database_internet_gateway",
            "module.blog_vpc.aws_route.database_ipv6_egress",
            "module.blog_vpc.aws_route.database_nat_gateway",
            "module.blog_vpc.aws_route.private_dns64_nat_gateway",
            "module.blog_vpc.aws_route.private_ipv6_egress",
            "module.blog_vpc.aws_route.private_nat_gateway",
            "module.blog_vpc.aws_route.public_internet_gateway",
            "module.blog_vpc.aws_route.public_internet_gateway_ipv6",
            "module.blog_vpc.aws_route_table.database",
            "module.blog_vpc.aws_route_table.elasticache",
            "module.blog_vpc.aws_route_table.intra",
            "module.blog_vpc.aws_route_table.private",
            "module.blog_vpc.aws_route_table.public",
            "module.blog_vpc.aws_route_table.redshift",
            "module.blog_vpc.aws_route_table_association.database",
            "module.blog_vpc.aws_route_table_association.elasticache",
            "module.blog_vpc.aws_route_table_association.intra",
            "module.blog_vpc.aws_route_table_association.outpost",
            "module.blog_vpc.aws_route_table_association.private",
            "module.blog_vpc.aws_route_table_association.public",
            "module.blog_vpc.aws_route_table_association.redshift",
            "module.blog_vpc.aws_route_table_association.redshift_public",
            "module.blog_vpc.aws_subnet.database",
            "module.blog_vpc.aws_subnet.elasticache",
            "module.blog_vpc.aws_subnet.intra",
            "module.blog_vpc.aws_subnet.outpost",
            "module.blog_vpc.aws_subnet.private",
            "module.blog_vpc.aws_subnet.public",
            "module.blog_vpc.aws_subnet.redshift",
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_dhcp_options.this",
            "module.blog_vpc.aws_vpc_dhcp_options_association.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.blog_vpc.aws_vpn_gateway.this",
            "module.blog_vpc.aws_vpn_gateway_attachment.this",
            "module.blog_vpc.aws_vpn_gateway_route_propagation.intra",
            "module.blog_vpc.aws_vpn_gateway_route_propagation.private",
            "module.blog_vpc.aws_vpn_gateway_route_propagation.public",
            "module.blog_vpc.data.aws_caller_identity.current",
            "module.blog_vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.blog_vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.blog_vpc.data.aws_partition.current",
            "module.blog_vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:858299572191:security-group/sg-028c02115989ddb7b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-028c02115989ddb7b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0eb7dda06047addb8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-blog-web-sg",
            "name_prefix": "",
            "owner_id": "858299572191",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-070de206c17503e80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg_lb",
            "module.blog_vpc.aws_cloudwatch_log_group.flow_log",
            "module.blog_vpc.aws_customer_gateway.this",
            "module.blog_vpc.aws_db_subnet_group.database",
            "module.blog_vpc.aws_default_network_acl.this",
            "module.blog_vpc.aws_default_route_table.default",
            "module.blog_vpc.aws_default_security_group.this",
            "module.blog_vpc.aws_default_vpc.this",
            "module.blog_vpc.aws_egress_only_internet_gateway.this",
            "module.blog_vpc.aws_eip.nat",
            "module.blog_vpc.aws_elasticache_subnet_group.elasticache",
            "module.blog_vpc.aws_flow_log.this",
            "module.blog_vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.blog_vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.blog_vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.blog_vpc.aws_internet_gateway.this",
            "module.blog_vpc.aws_nat_gateway.this",
            "module.blog_vpc.aws_network_acl.database",
            "module.blog_vpc.aws_network_acl.elasticache",
            "module.blog_vpc.aws_network_acl.intra",
            "module.blog_vpc.aws_network_acl.outpost",
            "module.blog_vpc.aws_network_acl.private",
            "module.blog_vpc.aws_network_acl.public",
            "module.blog_vpc.aws_network_acl.redshift",
            "module.blog_vpc.aws_network_acl_rule.database_inbound",
            "module.blog_vpc.aws_network_acl_rule.database_outbound",
            "module.blog_vpc.aws_network_acl_rule.elasticache_inbound",
            "module.blog_vpc.aws_network_acl_rule.elasticache_outbound",
            "module.blog_vpc.aws_network_acl_rule.intra_inbound",
            "module.blog_vpc.aws_network_acl_rule.intra_outbound",
            "module.blog_vpc.aws_network_acl_rule.outpost_inbound",
            "module.blog_vpc.aws_network_acl_rule.outpost_outbound",
            "module.blog_vpc.aws_network_acl_rule.private_inbound",
            "module.blog_vpc.aws_network_acl_rule.private_outbound",
            "module.blog_vpc.aws_network_acl_rule.public_inbound",
            "module.blog_vpc.aws_network_acl_rule.public_outbound",
            "module.blog_vpc.aws_network_acl_rule.redshift_inbound",
            "module.blog_vpc.aws_network_acl_rule.redshift_outbound",
            "module.blog_vpc.aws_redshift_subnet_group.redshift",
            "module.blog_vpc.aws_route.database_dns64_nat_gateway",
            "module.blog_vpc.aws_route.database_internet_gateway",
            "module.blog_vpc.aws_route.database_ipv6_egress",
            "module.blog_vpc.aws_route.database_nat_gateway",
            "module.blog_vpc.aws_route.private_dns64_nat_gateway",
            "module.blog_vpc.aws_route.private_ipv6_egress",
            "module.blog_vpc.aws_route.private_nat_gateway",
            "module.blog_vpc.aws_route.public_internet_gateway",
            "module.blog_vpc.aws_route.public_internet_gateway_ipv6",
            "module.blog_vpc.aws_route_table.database",
            "module.blog_vpc.aws_route_table.elasticache",
            "module.blog_vpc.aws_route_table.intra",
            "module.blog_vpc.aws_route_table.private",
            "module.blog_vpc.aws_route_table.public",
            "module.blog_vpc.aws_route_table.redshift",
            "module.blog_vpc.aws_route_table_association.database",
            "module.blog_vpc.aws_route_table_association.elasticache",
            "module.blog_vpc.aws_route_table_association.intra",
            "module.blog_vpc.aws_route_table_association.outpost",
            "module.blog_vpc.aws_route_table_association.private",
            "module.blog_vpc.aws_route_table_association.public",
            "module.blog_vpc.aws_route_table_association.redshift",
            "module.blog_vpc.aws_route_table_association.redshift_public",
            "module.blog_vpc.aws_subnet.database",
            "module.blog_vpc.aws_subnet.elasticache",
            "module.blog_vpc.aws_subnet.intra",
            "module.blog_vpc.aws_subnet.outpost",
            "module.blog_vpc.aws_subnet.private",
            "module.blog_vpc.aws_subnet.public",
            "module.blog_vpc.aws_subnet.redshift",
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_dhcp_options.this",
            "module.blog_vpc.aws_vpc_dhcp_options_association.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.blog_vpc.aws_vpn_gateway.this",
            "module.blog_vpc.aws_vpn_gateway_attachment.this",
            "module.blog_vpc.aws_vpn_gateway_route_propagation.intra",
            "module.blog_vpc.aws_vpn_gateway_route_propagation.private",
            "module.blog_vpc.aws_vpn_gateway_route_propagation.public",
            "module.blog_vpc.data.aws_caller_identity.current",
            "module.blog_vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.blog_vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.blog_vpc.data.aws_partition.current",
            "module.blog_vpc.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.blog_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:858299572191:network-acl/acl-0ef9f39e970e734d4",
            "default_network_acl_id": "acl-0ef9f39e970e734d4",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ef9f39e970e734d4",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "858299572191",
            "subnet_ids": [
              "subnet-0094c589419defb13",
              "subnet-041ef447b400233de",
              "subnet-05ce405fbfe2a3603"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-070de206c17503e80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.blog_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.blog_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:858299572191:route-table/rtb-0cdb578a2cb4c8bd7",
            "default_route_table_id": "rtb-0cdb578a2cb4c8bd7",
            "id": "rtb-0cdb578a2cb4c8bd7",
            "owner_id": "858299572191",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-070de206c17503e80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.blog_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.blog_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:858299572191:security-group/sg-0c869ec702212a688",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c869ec702212a688",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "858299572191",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-070de206c17503e80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.blog_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.blog_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:858299572191:internet-gateway/igw-0bca2d63a85de7576",
            "id": "igw-0bca2d63a85de7576",
            "owner_id": "858299572191",
            "tags": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-070de206c17503e80"
          },
          "dependencies": [
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.blog_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bca2d63a85de7576",
            "id": "r-rtb-0764d83a06a6fcc9b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0764d83a06a6fcc9b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.blog_vpc.aws_internet_gateway.this",
            "module.blog_vpc.aws_route_table.public",
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.blog_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:858299572191:route-table/rtb-0764d83a06a6fcc9b",
            "id": "rtb-0764d83a06a6fcc9b",
            "owner_id": "858299572191",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-070de206c17503e80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.blog_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020dc12158fd51bae",
            "route_table_id": "rtb-0764d83a06a6fcc9b",
            "subnet_id": "subnet-05ce405fbfe2a3603"
          },
          "dependencies": [
            "module.blog_vpc.aws_route_table.public",
            "module.blog_vpc.aws_subnet.public",
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fdc5d9c01af3031",
            "route_table_id": "rtb-0764d83a06a6fcc9b",
            "subnet_id": "subnet-041ef447b400233de"
          },
          "dependencies": [
            "module.blog_vpc.aws_route_table.public",
            "module.blog_vpc.aws_subnet.public",
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0390bcae86b54a272",
            "route_table_id": "rtb-0764d83a06a6fcc9b",
            "subnet_id": "subnet-0094c589419defb13"
          },
          "dependencies": [
            "module.blog_vpc.aws_route_table.public",
            "module.blog_vpc.aws_subnet.public",
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.blog_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:858299572191:subnet/subnet-05ce405fbfe2a3603",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ce405fbfe2a3603",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "858299572191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-070de206c17503e80"
          },
          "dependencies": [
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:858299572191:subnet/subnet-041ef447b400233de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041ef447b400233de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "858299572191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-070de206c17503e80"
          },
          "dependencies": [
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:858299572191:subnet/subnet-0094c589419defb13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0094c589419defb13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "858299572191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-us-east-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-us-east-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-070de206c17503e80"
          },
          "dependencies": [
            "module.blog_vpc.aws_vpc.this",
            "module.blog_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.blog_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:858299572191:vpc/vpc-070de206c17503e80",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ef9f39e970e734d4",
            "default_route_table_id": "rtb-0cdb578a2cb4c8bd7",
            "default_security_group_id": "sg-0c869ec702212a688",
            "dhcp_options_id": "dopt-83195be8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-070de206c17503e80",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cdb578a2cb4c8bd7",
            "owner_id": "858299572191",
            "tags": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}